# stric

./: .gitignore  CMakeLists.txt  Stric.g4  lexer.cpp  lexer.h  test.stric
src/: CMakeLists.txt  controls.h  dfa.cpp  dfa.h  executor.cpp  executor.h  lex.cpp  lexer.cpp  lexer.h  main.cpp  parse.cpp  parser.cpp  parser.h  parser_gen.cpp  parser_gen.h  parser_operations.cpp  parser_operations.h  syntax.h
src/object/: CMakeLists.txt  bool.cpp  bool.h  int.cpp  int.h  meta.cpp  meta.h  object.cpp  object.h  operators.cpp  operators.h  value_object.h
src/parser/: CMakeLists.txt  dfa.cpp  dfa.h  lexer.cpp  parser.cpp  parser.h  parser_operations.cpp  parser_operations.h  syntax.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  test_dfa.cpp  test_lexer.cpp  test_parser.cpp  test_parser_gen.cpp
